--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "pinia": "^2.0.23",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
