--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html}\""
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@heroicons/vue": "^2.0.13",
+    "@vue/apollo-composable": "^4.0.0-beta.1",
     "autoprefixer": "^10.4.13",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "pinia": "^2.0.23",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2",
