--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@apollo/server": "^4.2.2",
     "@capacitor/android": "^4.6.0",
     "@capacitor/cli": "^4.6.0",
     "@capacitor/core": "^4.6.0",
@@ -26,12 +27,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "latest-3",
     "@heroicons/vue": "^2.0.13",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.11.9",
+    "@vendia/serverless-express": "^4.10.1",
     "@vue/apollo-composable": "^4.0.0-beta.1",
     "autoprefixer": "^10.4.13",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "firebase": "^9.14.0",
+    "firebase-admin": "^11.3.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "mongoose": "^6.8.0",
     "pinia": "^2.0.23",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2",
