Use connection string for DB connection

--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-DB_USERNAME="mongodbusername"
-DB_PASSWORD="mongodbpassword"
-DB_CLUSTER="mongodbcluster"
+DB_CONNECTION_STRING="mongodbconnectionstring"
 NODE_ENV="prod"
 VITE_FIREBASE_API_KEY="firebaseapikey"
 VITE_FIREBASE_AUTH_DOMAIN='firebaseauthdomain'
